plugins {
	id 'org.springframework.boot' version '2.4.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'hello'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.fork = true
	options.forkOptions.jvmArgs += [
			'--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
			'--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
			'--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
			'--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
			'--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
	]
}
